...
            icon: const Icon(
              Icons.diamond,
              color: Colors.amber,
            ),
          ),
          IconButton(
            key: ValueKey('btnSettings'),
            onPressed: () {
              Navigator.of(context).pushNamed(MyRoutes.configUser);
            },
            icon: const Icon(
              Icons.settings,
            ),
...
